Fixed 'something wrong' text wrapping

--- a/src/codex/components/SearchPanels/EventSearchPanel/index.module.scss
+++ b/src/codex/components/SearchPanels/EventSearchPanel/index.module.scss
@@ -132,6 +132,7 @@
     @media (max-width: $breakpoint-mobile) {
       flex-basis: 100%;
       justify-content: center;
+      min-width: 0;
     }
   }
 }
@@ -178,6 +179,7 @@
 
   &__text {
     flex: 1;
+    min-width: 0;
     line-height: 1.2;
   }
 
